--- a/VisualStudio2010/Sample.SessionStateProvider/App.config
+++ b/VisualStudio2010/Sample.SessionStateProvider/App.config
@@ -1,22 +1,29 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="riakClusterConfiguration" type="CorrugatedIron.Config.RiakClusterConfiguration, CorrugatedIron"/>
+    <section name="riakClusterConfiguration" type="CorrugatedIron.Config.RiakClusterConfiguration, CorrugatedIron" />
+    <section name="riakConfig" type="CorrugatedIron.Config.RiakClusterConfiguration, CorrugatedIron" />
   </configSections>
-
   <!-- This is a "typical" development cluster configuration that you get when
          you run 'make devrel' from the Riak Source -->
   <riakClusterConfiguration>
     <nodes>
-      <node name="dev1" hostAddress="riak-test" pbcPort="8081" restPort="8091" poolSize="20" acquireTimeout="1000" idleTimeout="20000"/>
-      <node name="dev2" hostAddress="riak-test" pbcPort="8082" restPort="8092" poolSize="20" acquireTimeout="1000" idleTimeout="20000"/>
-      <node name="dev3" hostAddress="riak-test" pbcPort="8083" restPort="8093" poolSize="20" acquireTimeout="1000" idleTimeout="20000"/>
+      <node name="dev1" hostAddress="riak-test" pbcPort="8081" restPort="8091" poolSize="20" acquireTimeout="1000" idleTimeout="20000" />
+      <node name="dev2" hostAddress="riak-test" pbcPort="8082" restPort="8092" poolSize="20" acquireTimeout="1000" idleTimeout="20000" />
+      <node name="dev3" hostAddress="riak-test" pbcPort="8083" restPort="8093" poolSize="20" acquireTimeout="1000" idleTimeout="20000" />
     </nodes>
   </riakClusterConfiguration>
   <riakSessionConfiguration>
     <timeout_ms>1800000</timeout_ms>
   </riakSessionConfiguration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <riakConfig nodePollTime="5000" defaultRetryWaitTime="200" defaultRetryCount="3">
+    <nodes>
+      <node name="dev1" hostAddress="riak-test" pbcPort="8081" restScheme="http" restPort="8091" poolSize="20" />
+      <node name="dev2" hostAddress="riak-test" pbcPort="8082" restScheme="http" restPort="8092" poolSize="20" />
+      <node name="dev3" hostAddress="riak-test" pbcPort="8083" restScheme="http" restPort="8093" poolSize="20" />
+    </nodes>
+  </riakConfig>
 </configuration>
