--- a/VisualStudio2010/Sample.SessionStateProvider/Sample.SessionStateProvider.csproj
+++ b/VisualStudio2010/Sample.SessionStateProvider/Sample.SessionStateProvider.csproj
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CorrugatedIron">
-      <HintPath>..\packages\CorrugatedIron.0.1.0.0\lib\net40\CorrugatedIron.dll</HintPath>
+    <Reference Include="CorrugatedIron, Version=0.1.1.0, Culture=neutral, PublicKeyToken=fb1ec7de601674df, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CorrugatedIron.0.1.1.0\lib\net40\CorrugatedIron.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
