--- a/Sample/App.config
+++ b/Sample/App.config
@@ -15,4 +15,16 @@
       <node name="dev3" hostAddress="riak-test" pbcPort="8083" restScheme="http" restPort="8093" poolSize="20" />
     </nodes>
   </riakConfig>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.470" newVersion="2.0.0.470" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
