--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Sample.SessionStateProvider\packages.config" />
-  <repository path="..\Sample.YakRiak\packages.config" />
-  <repository path="..\Sample\packages.config" />
+  <repository path="../MiscellaneousSamples/packages.config" />
+  <repository path="../Sample.SessionStateProvider/packages.config" />
 </repositories>
