--- a/Sample/packages.config
+++ b/Sample/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.0.0-beta" targetFramework="net40" />
+  <package id="Autofac" version="3.0.1" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" />
-  <package id="CorrugatedIron" version="1.0.2" targetFramework="net40" />
+  <package id="CorrugatedIron" version="1.3.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
-  <package id="protobuf-net" version="2.0.0.612" targetFramework="net40" />
+  <package id="protobuf-net" version="2.0.0.621" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="TinyIoC" version="1.2" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net40" />
